# project_manager

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  Status.toml  bk.status.toml  design.txt  makefile  status.toml  status.toml.bk.2  test.toml  test.txt
crates/api/: Cargo.toml
crates/api/src/: cached_project.rs  db.rs  desc.rs  error.rs  lib.rs  main.rs  manager.rs  project.rs  tags.rs  task.rs  trees.rs  utils.rs
crates/api/src/config/: default.rs  default_project.toml  manager.rs  mod.rs  project.rs
crates/api/src/v2/: manager.rs  mod.rs  project.rs
crates/api/tests/: handler.rs  test_task.json  test_tree.json  trees.rs
crates/api/tests/test_projects/: project1.toml
crates/client/: Cargo.toml  makefile
crates/client/src/: main.rs  utils.rs
crates/client/src/cli/: delete.rs  features.rs  git.rs  init.rs  list.rs  mark_feature.rs  mod.rs  new.rs  print.rs  rename.rs  utils.rs
crates/client/src/cli/abouts/: DelStruct.txt  GitStruct.txt  InitStruct.txt  NewStruct.txt
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/toml/: Cargo.toml
crates/toml/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
document/: main.tex
files/config/fish/completions/: zd.fish
files/config/fish/functions/: gitm.fish  lst.fish  pm.fish  zd.fish
include/pm/: config.h
src/: add.rs  config.c  config.rs  constats.rs  daemon.rs  error.rs  errors.rs  list.rs  main.c  main.rs  options.rs  utils.rs
src/baked/: manager.rs  project.rs
src/cli/: add.rs  delete.rs  general.rs  init.rs  mod.rs  new.rs  print.rs  project.rs
src/config/: default_manager.toml  manager.rs  mod.rs  project.rs
src/configs/: config.rs  mod.rs  project.rs  status.rs
src/daemon/: mod.rs
src/editor/: mod.rs
src/manager/: mod.rs
src/tracker/: mod.rs
src/update/: v0_1_0.rs
tests/: project_test.toml
