[package]
name    = "project_manager_api"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.57"

[dependencies.ly]
git = "https://github.com/HasSak-47/ly-rustlib"
branch = "stable"

[dependencies.serde]
version  = "1.0"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0"
