[package]
name = "project_manager_client"
version = "0.1.18"
edition = "2021"

[dependencies]
dirs = "1.0"
rand = "0.8.5"
anyhow = "1.0.79"
toml = "0.8.19"
serde = "1.0"
thiserror = "1.0.57"
project_manager_api = {path = "../api"}
libc = "0.2.153"

[dependencies.ly]
path = "../../../ly-rlib"

[dependencies.clap]
version  = "4.0"
features = ["derive"]
