[package]
name    = "project_manager_daemon"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.57"
rand = "0.8.5"
project_manager_api = {path = "../api"}

[dependencies.ly]
path = "../../../ly-rlib"

[dependencies.serde]
version  = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dev-dependencies]
serde_json = "1.0"
