[package]
name = "project_manager_wasm"
version = "0.1.18"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.57"
project_manager_api = {path = "../api"}
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
async-std = "1.12.0"
toml = "0.4.2"

[lib]
crate-type = ["cdylib"]

[package.metadata]
target = "wasm32-unknown-unknown"
